--- a/sumitweb/package.json
+++ b/sumitweb/package.json
@@ -8,10 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react": "^4.11.0",
+    "@coreui/vue": "^4.10.1",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
